--- a/PythonProject/django/newproject/templates/hello_class.html
+++ b/PythonProject/django/newproject/templates/hello_class.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h2>Hi, {{ name }}</h2>
+    <h2>Hi, {{ name }}, {{ surname }}</h2>
     !this is class based template
 
 </body>
