--- a/PythonProject/django/newproject/templates/accounts/login.html
+++ b/PythonProject/django/newproject/templates/accounts/login.html
@@ -1,35 +1,9 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-
-
-    {% load static %}
-    <link type="text/css" rel="stylesheet" href="{% static 'accounts/style.css' %}">
+{% extends 'accounts/base.html' %}
 
 
 
-    <style type="text/css">
-        button {
-            cursor: pointer;
-        }
-    </style>
-    <script type="text/javascript">
-        $(function() {
-
-        });
-    </script>
-</head>
-
-
-
-<body>
-    <div class="container">
+{% block login %}
+     <div class="container">
         <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
             <div class="panel panel-info" >
                     <div class="panel-heading">
@@ -161,5 +135,6 @@
             </div>
          </div>
     </div>
-</body>
-</html>
+{% endblock %}
+
+
