--- a/PythonProject/django/newproject/templates/accounts/login.html
+++ b/PythonProject/django/newproject/templates/accounts/login.html
@@ -21,6 +21,10 @@
 						<div class="row">
 							<div class="col-lg-12">
 								<form id="login-form" action="" method="post" role="form" style="display: block;">
+
+                                    {% csrf_token %}
+                                    {{ form }}
+
 									<div class="form-group">
 										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
@@ -48,18 +52,27 @@
 										</div>
 									</div>
 								</form>
+
+
 								<form id="register-form" action="" method="post" role="form" style="display: none;">
+
+                                    {% csrf_token %}
+                                    {{ form }}
+
 									<div class="form-group">
-										<input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+										<input type="text" name="username" id="username" required tabindex="1" class="form-control" placeholder="Username" value="">
+									</div>
+                                    <div class="form-group">
+										<input type="text" name="surname" id="surname" required tabindex="1" class="form-control" placeholder="Surname" value="">
 									</div>
 									<div class="form-group">
-										<input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+										<input type="email" name="email" id="email" tabindex="1" required class="form-control" placeholder="Email Address" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="password" id="password" required tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
-										<input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="password" name="confirm-password" required id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
 									<div class="form-group">
 										<div class="row">
