--- a/PythonProject/django/newproject/templates/accounts/userForm.html
+++ b/PythonProject/django/newproject/templates/accounts/userForm.html
@@ -71,7 +71,7 @@
 									</pre>
 								</h2>
 
-								<form id="register-form" action="accounts/registration" method="post" role="form" style="display: none;">
+								<form id="register-form" action="/accounts/registration/" method="post" role="form" style="display: none;">
 
                                     {% csrf_token %}
 
