--- a/PythonProject/django/newproject/templates/accounts/userForm.html
+++ b/PythonProject/django/newproject/templates/accounts/userForm.html
@@ -5,23 +5,8 @@
 
 {% load static %}
 {% block locstatic %}
-	<script type="text/javascript">var speed = 0;</script>
 	<link href="{% static 'accounts/css/login.css' %}" rel="stylesheet">
 	<script type="text/javascript" src="{% static 'accounts/js/login-script.js' %}"></script>
-	<script type="text/javascript">
-	$(document).ready(function () {
-		var status = "{{status}}";
-
-		if(status == 'registration') {
-			$('#register-form-link').click();
-			speed = 100;
-		} else if(status == 'login') {
-			$('#login-form-link').click();
-			speed = 100;
-		}
-	})
-    </script>
-
 {% endblock %}
 
 
@@ -43,40 +28,7 @@
 					</div>
 					<div class="panel-body">
 						<div class="row">
-							<div class="col-lg-12 form-container">
-
-								<form id="login-form" action="" method="post" role="form" style="display: block;">
-
-									{% csrf_token %}
-
-									<div class="form-group">
-										<input type="text" name="username" id="l-username" tabindex="1" class="form-control" required placeholder="Username" value="">
-									</div>
-									<div class="form-group">
-										<input type="password" name="password" id="l-password" tabindex="2" class="form-control" required placeholder="Password">
-									</div>
-									<div class="form-group text-center">
-										<input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-										<label for="remember"> Remember Me</label>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-sm-6 col-sm-offset-3">
-												<input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<div class="row">
-											<div class="col-lg-12">
-												<div class="text-center">
-													<a href="" tabindex="5" class="forgot-password">Forgot Password?</a>
-												</div>
-											</div>
-										</div>
-									</div>
-								</form>
-
+							<div class="col-lg-12">
 								<!--<form id="login-form" action="" method="post" role="form" style="display: block;">
 
                                     {% csrf_token %}
@@ -117,35 +69,26 @@
 									<pre>
 										{{requestPostData}}
 									</pre>
-									<pre>
-										{{form}}
-									</pre>
-									<pre>
-										{{formV}}
-									</pre>
-									<pre>
-										{{errors}}
-									</pre>
 								</h2>
 
 								<form id="register-form" action="/accounts/registration/" method="post" role="form" style="display: none;">
 
-									{% csrf_token %}
+                                    {% csrf_token %}
 
 									<div class="form-group">
 										<input type="text" name="username" id="username" required tabindex="1" class="form-control" placeholder="Username" value="">
 									</div>
-									<div class="form-group">
+                                    <div class="form-group">
 										<input type="text" name="surname" id="surname" required tabindex="1" class="form-control" placeholder="Surname" value="">
 									</div>
 									<div class="form-group">
 										<input type="email" name="email" id="email" tabindex="1" required class="form-control" placeholder="Email Address" value="">
 									</div>
 									<div class="form-group">
-										<input type="password" name="password1" id="password" required tabindex="2" class="form-control" placeholder="Password">
+										<input type="password" name="password" id="password" required tabindex="2" class="form-control" placeholder="Password">
 									</div>
 									<div class="form-group">
-										<input type="password" name="password2" required id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+										<input type="password" name="confirm-password" required id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
 									</div>
 									<div class="form-group">
 										<div class="row">
